--- a/src/Mocosha.DbProvider/Mocosha.DbProvider.csproj
+++ b/src/Mocosha.DbProvider/Mocosha.DbProvider.csproj
@@ -4,7 +4,7 @@
     <AssemblyName>Mocosha.DbProvider</AssemblyName>
     <AssemblyTitle>Mocosha.DbProvider</AssemblyTitle>
     <Description>Simple database access library on top of ADO.NET </Description>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <DebugType>portable</DebugType>
     <Company>mocosha Inc.</Company>
     <Version>1.0.0</Version>
@@ -15,8 +15,12 @@
     <RepositoryUrl>https://github.com/mocosha/db-provider.git</RepositoryUrl>
     <PackageOutputPath>./nupkg</PackageOutputPath>
     <PreserveCompilationContext>true</PreserveCompilationContext>
-    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+  </ItemGroup>
 </Project>
